refactor: character creative support 경계를 포트 기반으로 정리